update model docs

--- a/docs/documentation/configuration/ingestion/embedding.mdx
+++ b/docs/documentation/configuration/ingestion/embedding.mdx
@@ -210,7 +210,7 @@ Support for any of the embedding providers listed below is provided through Lite
   </Tab>
 
   <Tab title="Voyage AI">
-  Example Configuration
+  Example configuration
     ```toml example r2r.toml
     provider = "litellm"
     base_model = "voyage/voyage-01"
