--- a/docs/documentation/deployment/azure.mdx
+++ b/docs/documentation/deployment/azure.mdx
@@ -52,7 +52,7 @@ http://<your-vm-ip-address>:7272
 ```
 
 <Frame caption="Opening ports 7272 in our Azure cloud deployment">
-  <img src="../images/azure_security.png" />
+  <img src="images/azure_security.png" />
 </Frame>
 
 ## Installing Dependencies
@@ -60,7 +60,7 @@ http://<your-vm-ip-address>:7272
 SSH into your newly created VM with a command like `ssh -i my_pem.pem azureuser@<your-vm-ip-address>`:
 
 <Frame caption="System info at first connection to the remote instance">
-  <img src="../images/ssh_print.png" />
+  <img src="images/ssh_print.png" />
 </Frame>
 
 Now, run the following commands to install the necessary R2R dependencies:
@@ -102,7 +102,7 @@ docker run hello-world
 ```
 
 <Frame caption="Successful Docker hello-world output">
-  <img src="../images/docker_hello_world.png" />
+  <img src="images/docker_hello_world.png" />
 </Frame>
 
 
@@ -120,7 +120,7 @@ r2r serve --docker
 
 
 <Frame caption="Printout for a successful deployment">
-  <img src="../images/azure_deployment.png" />
+  <img src="images/azure_deployment.png" />
 </Frame>
 
 2. Double check the health of the system
